--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 }
 ::placeholder {
   color: #888686;
+  font-weight: 400;
 }
 .header {
   background: url(../images/bg.png) no-repeat center;
@@ -22,6 +23,7 @@
   min-height: 200px;
   position: relative;
 }
+
 .form {
   position: absolute;
   top: -40%;
@@ -104,6 +106,7 @@ label {
   font-size: 14px;
   line-height: 16px;
   color: #888686;
+  font-weight: 600;
 }
 @media (max-width: 992px) {
   .input {
